# tibet-cap-bus

./: CHANGELOG.md  LICENSE  README.md  ROADMAP.md  SSM-MAGIC-BYTES.md  pyproject.toml
fixtures/: airlock-runtime-verdict.v1.example.json  gateway-event.resume.example.json
src/tibet_cap_bus/: __init__.py  adapters.py  cli.py  event_contract.py  gpu_mailbox.py  models.py  onion.py  runtime.py  ssm_magic.py  verdict_contract.py  verdict_transitions.py
tests/: test_gpu_mailbox.py  test_onion.py  test_runtime.py  test_ssm_magic.py  test_verdict_fixtures.py  test_verdict_transitions.py
